examples/datalog/18_advanced_patterns/18_ancestors.dl
% Test: Ancestor/descendant pattern
% Expected: Family tree queries work correctly
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_ancestors
.kg use test_ancestors

% Parent relationship
+parent[("Alice", "Bob"), ("Alice", "Carol"), ("Bob", "Dave"), ("Bob", "Eve"), ("Carol", "Frank")].

% Direct parent
+ancestor(Child, Anc) :- parent(Anc, Child).

% Transitive ancestors
+ancestor(Child, Anc) :- parent(Mid, Child), ancestor(Mid, Anc).

?- ancestor(Child, Anc).

% Find all descendants of Alice
alice_descendants(D) :- ancestor(D, "Alice").

?- alice_descendants(D).

% Count descendants
desc_count(Person, <COUNT:D>) :- ancestor(D, Person).

?- desc_count(Person, Count).

.kg use default
.kg drop test_ancestors
